// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Popover > Collapsed > renders correctly 1`] = `
<jest>
  <div
    class="ecl-popover"
    data-ecl-auto-init="Popover"
  >
    <button
      aria-controls="popover-example"
      aria-expanded="false"
      class="ecl-button ecl-button--ghost ecl-popover__toggle"
      data-ecl-popover-toggle=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#share"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Popover
        </span>
      </span>
    </button>
    <div
      class="ecl-popover__container"
      hidden=""
      id="popover-example"
    >
      <div
        class="ecl-popover__scrollable"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-popover__close ecl-button--icon-only"
          data-ecl-popover-close=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#close"
              />
            </svg>
          </span>
        </button>
        <div
          class="ecl-popover__content"
        >
          Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
    Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Popover > Collapsed > renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-popover"
    data-ecl-auto-init="Popover"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <button
      aria-controls="popover-example"
      aria-expanded="false"
      class="ecl-button ecl-button--ghost ecl-popover__toggle"
      data-ecl-popover-toggle=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#share"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Popover
        </span>
      </span>
    </button>
    <div
      class="ecl-popover__container"
      hidden=""
      id="popover-example"
    >
      <div
        class="ecl-popover__scrollable"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-popover__close ecl-button--icon-only"
          data-ecl-popover-close=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#close"
              />
            </svg>
          </span>
        </button>
        <div
          class="ecl-popover__content"
        >
          Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
    Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Popover > Collapsed > renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-popover custom-class custom-class--test"
    data-ecl-auto-init="Popover"
  >
    <button
      aria-controls="popover-example"
      aria-expanded="false"
      class="ecl-button ecl-button--ghost ecl-popover__toggle"
      data-ecl-popover-toggle=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-button__icon"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#share"
          />
        </svg>
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Popover
        </span>
      </span>
    </button>
    <div
      class="ecl-popover__container"
      hidden=""
      id="popover-example"
    >
      <div
        class="ecl-popover__scrollable"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-popover__close ecl-button--icon-only"
          data-ecl-popover-close=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#close"
              />
            </svg>
          </span>
        </button>
        <div
          class="ecl-popover__content"
        >
          Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
    Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Popover > Collapsed > renders correctly with links as the trigger 1`] = `
<jest>
  <div
    class="ecl-popover"
    data-ecl-auto-init="Popover"
  >
    <a
      aria-controls="popover-example"
      aria-expanded="false"
      aria-label="Popover toggle"
      class="ecl-link ecl-link--button ecl-popover__toggle"
      data-ecl-popover-toggle=""
      href="#test-path"
    >
      Popover
    </a>
    <div
      class="ecl-popover__container"
      hidden=""
      id="popover-example"
    >
      <div
        class="ecl-popover__scrollable"
      >
        <button
          class="ecl-button ecl-button--tertiary ecl-popover__close ecl-button--icon-only"
          data-ecl-popover-close=""
          type="button"
        >
          <span
            class="ecl-button__container"
          >
            <span
              class="ecl-button__label"
              data-ecl-label="true"
            >
              Close
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--m ecl-button__icon"
              data-ecl-icon=""
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#close"
              />
            </svg>
          </span>
        </button>
        <div
          class="ecl-popover__content"
        >
          Nulla est ad excepteur sint officia fugiat aute commodo ullamco amet culpa eiusmod labore.
    Esse nostrud aliqua pariatur pariatur officia non laboris cillum velit dolore in sit laboris fugiat.
        </div>
      </div>
    </div>
  </div>
</jest>
`;
